--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 					<option value="p">Number of providers</option>
 				</optgroup>
 			</select>
+			<select id="fccdef">
+				<optgroup label="Broadband definition">
+					<option value="pre" selected="">Pre-2015</option>
+					<option value="post">Post-2015</option>
+				</optgroup>
+			</select>
 			<div id="play">
 				<i class="fas fa-play fa-2x" title="Play animation"></i>
 			</div>
@@ -52,6 +58,111 @@
 
 <div class="posttext">
 
+  <h4 id="average-time-to-download-files-of-various-sizes-based-on-broadband-speed-tier">Average time to download files of various sizes based on broadband speed tier</h4>
+
+  <table>
+    <thead>
+      <tr>
+        <th style="text-align: left"> </th>
+        <th style="text-align: center"> </th>
+        <th style="text-align: center">Book (1MB)</th>
+        <th style="text-align: center">MP3 (4MB)</th>
+        <th style="text-align: center">Movie (6GB)</th>
+      </tr>
+      <tr>
+        <th style="text-align: left"> </th>
+        <th style="text-align: center">Rate/sec range</th>
+        <th style="text-align: center">[HH:MM:SS]</th>
+        <th style="text-align: center">[HH:MM:SS]</th>
+        <th style="text-align: center">[HH:MM:SS]</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="text-align: left">Tier 1</td>
+        <td style="text-align: center">x &lt;= 200 KB/sec</td>
+        <td style="text-align: center">00:00:40</td>
+        <td style="text-align: center">00:02:40</td>
+        <td style="text-align: center">68:16:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 2</td>
+        <td style="text-align: center">200 KB/sec &lt;= x &lt; 768 KB/sec</td>
+        <td style="text-align: center">00:00:10</td>
+        <td style="text-align: center">00:00:42</td>
+        <td style="text-align: center">17:47:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 3</td>
+        <td style="text-align: center">768 KB/sec &lt;= x &lt; 1.5 MB/sec</td>
+        <td style="text-align: center">00:00:05</td>
+        <td style="text-align: center">00:00:21</td>
+        <td style="text-align: center">09:06:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 4</td>
+        <td style="text-align: center">1.5 MB/sec &lt;= x &lt; 3 MB/sec</td>
+        <td style="text-align: center">00:00:03</td>
+        <td style="text-align: center">00:00:11</td>
+        <td style="text-align: center">04:33:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 5</td>
+        <td style="text-align: center">3 MB/sec &lt;= x &lt; 6MB/sec</td>
+        <td style="text-align: center">00:00:01</td>
+        <td style="text-align: center">00:00:05</td>
+        <td style="text-align: center">02:16:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 6</td>
+        <td style="text-align: center">6 MB/sec &lt;= x &lt; 10 MB/sec</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">00:00:02</td>
+        <td style="text-align: center">01:22:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 7</td>
+        <td style="text-align: center">10 MB/sec &lt;= x &lt; 25 MB/sec</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">00:00:01</td>
+        <td style="text-align: center">00:33:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 8</td>
+        <td style="text-align: center">25 MB/sec &lt;= x &lt; 50 MB/sec</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">00:00:01</td>
+        <td style="text-align: center">00:16:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 9</td>
+        <td style="text-align: center">50 MB/sec &lt;= x &lt; 100 MB/sec</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">00:08:00</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 10</td>
+        <td style="text-align: center">100 MB/sec &lt;= x &lt; 1 GB/sec</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">00:00:49</td>
+      </tr>
+      <tr>
+        <td style="text-align: left">Tier 11</td>
+        <td style="text-align: center">x &gt; 1 GB/sec</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">&lt; 00:00:01</td>
+        <td style="text-align: center">&lt; 00:00:49</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <p><em>Notes.</em> Values are taken from the <a href="https://www.broadbandmap.gov/classroom/speed">National Broadband
+Map</a>. <em>KB</em>: kilobyte;
+<em>MB</em>: megabyte; <em>GB</em>: gigabyte. 1 <em>MB</em> = 1,000 <em>KB</em>; 1 <em>GB</em> = 1,000
+<em>MB</em>. In 2015, the FCC raised the minimum download speed to qualify as
+broadband from 4 MB/sec (Tier 5) to 25 MB/sec (Tier 8).</p>
 </div>
 
 
