update email and text

--- a/index.html
+++ b/index.html
@@ -80,77 +80,77 @@
     <tbody>
       <tr>
         <td style="text-align: left">Tier 1</td>
-        <td style="text-align: center">x &lt;= 200 KB/sec</td>
+        <td style="text-align: center">x &lt;= 200 Kbps</td>
         <td style="text-align: center">00:00:40</td>
         <td style="text-align: center">00:02:40</td>
         <td style="text-align: center">68:16:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 2</td>
-        <td style="text-align: center">200 KB/sec &lt;= x &lt; 768 KB/sec</td>
+        <td style="text-align: center">200 Kbps &lt;= x &lt; 768 Kbps</td>
         <td style="text-align: center">00:00:10</td>
         <td style="text-align: center">00:00:42</td>
         <td style="text-align: center">17:47:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 3</td>
-        <td style="text-align: center">768 KB/sec &lt;= x &lt; 1.5 MB/sec</td>
+        <td style="text-align: center">768 Kbps &lt;= x &lt; 1.5 Mbps</td>
         <td style="text-align: center">00:00:05</td>
         <td style="text-align: center">00:00:21</td>
         <td style="text-align: center">09:06:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 4</td>
-        <td style="text-align: center">1.5 MB/sec &lt;= x &lt; 3 MB/sec</td>
+        <td style="text-align: center">1.5 Mbps &lt;= x &lt; 3 Mbps</td>
         <td style="text-align: center">00:00:03</td>
         <td style="text-align: center">00:00:11</td>
         <td style="text-align: center">04:33:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 5</td>
-        <td style="text-align: center">3 MB/sec &lt;= x &lt; 6MB/sec</td>
+        <td style="text-align: center">3 Mbps &lt;= x &lt; 6Mbps</td>
         <td style="text-align: center">00:00:01</td>
         <td style="text-align: center">00:00:05</td>
         <td style="text-align: center">02:16:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 6</td>
-        <td style="text-align: center">6 MB/sec &lt;= x &lt; 10 MB/sec</td>
+        <td style="text-align: center">6 Mbps &lt;= x &lt; 10 Mbps</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">00:00:02</td>
         <td style="text-align: center">01:22:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 7</td>
-        <td style="text-align: center">10 MB/sec &lt;= x &lt; 25 MB/sec</td>
+        <td style="text-align: center">10 Mbps &lt;= x &lt; 25 Mbps</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">00:00:01</td>
         <td style="text-align: center">00:33:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 8</td>
-        <td style="text-align: center">25 MB/sec &lt;= x &lt; 50 MB/sec</td>
+        <td style="text-align: center">25 Mbps &lt;= x &lt; 50 Mbps</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">00:00:01</td>
         <td style="text-align: center">00:16:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 9</td>
-        <td style="text-align: center">50 MB/sec &lt;= x &lt; 100 MB/sec</td>
+        <td style="text-align: center">50 Mbps &lt;= x &lt; 100 Mbps</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">00:08:00</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 10</td>
-        <td style="text-align: center">100 MB/sec &lt;= x &lt; 1 GB/sec</td>
+        <td style="text-align: center">100 Mbps &lt;= x &lt; 1 Gbps</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">00:00:49</td>
       </tr>
       <tr>
         <td style="text-align: left">Tier 11</td>
-        <td style="text-align: center">x &gt; 1 GB/sec</td>
+        <td style="text-align: center">x &gt; 1 Gbps</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">&lt; 00:00:01</td>
         <td style="text-align: center">&lt; 00:00:49</td>
@@ -160,9 +160,11 @@
 
   <p><em>Notes.</em> Values are taken from the <a href="https://www.broadbandmap.gov/classroom/speed">National Broadband
 Map</a>. <em>KB</em>: kilobyte;
-<em>MB</em>: megabyte; <em>GB</em>: gigabyte. 1 <em>MB</em> = 1,000 <em>KB</em>; 1 <em>GB</em> = 1,000
-<em>MB</em>. In 2015, the FCC raised the minimum download speed to qualify as
-broadband from 4 MB/sec (Tier 5) to 25 MB/sec (Tier 8).</p>
+<em>MB</em>: megabyte; <em>GB</em>: gigabyte; <em>Kbps</em>: kilobits / sec; <em>Mbps</em>:
+megabits / sec; <em>Gbps</em>: gigabits / sec; 1 byte = 8 bits. In 2015, the
+FCC raised the minimum download speed to qualify as broadband from 4
+Mbps (Tier 5) to 25 Mbps (Tier 8).</p>
+
 </div>
 
 
@@ -172,10 +174,10 @@ broadband from 4 MB/sec (Tier 5) to 25 MB/sec (Tier 8).</p>
   </main>
   <main>
     <div class="footer">
-      <p class="foot">&#169; 2018. This site powered by
+      <p class="foot">&#169; 2020. This site powered by
   <a href="http://jekyllrb.com">Jekyll</a> + <a href="https://github.com/syaning/vida">vida</a>.
   <a href="https://github.com/btskinner/broadband"><i class="fab fa-github fa-2x"></i></a>
-  <a href="mailto:btskinner@virginia.edu"><i class="far fa-envelope fa-2x"></i></a>
+  <a href="mailto:btskinner@coe.ufl.edu"><i class="far fa-envelope fa-2x"></i></a>
 </p>
 
     </div>
